syntax = "proto3";

package rivet.backend.module;

import "proto/common.proto";
import "proto/backend/module/function.proto";

// MARK: Game Version Config
message VersionConfig {	
	rivet.common.Uuid module_version_id = 1;

	message Fly {
		string vm_size = 1;
	}

	oneof runtime {
		Fly fly = 101;
	};
}

// MARK: Game Version Config Context
message VersionConfigCtx {

}

// MARK: Game Version Config Meta
message VersionConfigMeta {
	message Fly {
		string app_id = 1;
	}

	oneof runtime {
		Fly fly = 101;
	};
}

// Module
message Module {
	enum Publicity {
		PUBLIC = 0;
		PRIVATE = 1;
	}

	rivet.common.Uuid module_id = 1;
	string name_id = 2;
	rivet.common.Uuid team_id = 3;
	int64 create_ts = 4;
	Publicity publicity = 5;
}

// Version
message ModuleVersion {
	rivet.common.Uuid version_id = 1;
	rivet.common.Uuid module_id = 2;
	repeated rivet.backend.module.Function functions = 4;

	int major = 101;
	int minor = 102;
	int patch = 103;

	message DockerImage {
		// TODO: Auth?
		string image_tag = 1;
	}

	oneof image {
		DockerImage docker_image = 1;
	}
}

