syntax = "proto3";

package rivet.backend.pkg.region.recommend;

import "proto/common.proto";

message Request {
	optional string origin_ip = 1 [deprecated = true];
	optional double latitude = 3;
	optional double longitude = 4;
	repeated rivet.common.Uuid region_ids = 2;
}

message Response {
	message Region {
		rivet.common.Uuid region_id = 1;
		double latitude = 2;
		double longitude = 3;
		double distance_meters = 4;
	}

	repeated Region regions = 1;
}
